[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "webml"
version = "0.1.0"
edition = "2018"

[dependencies]
nom = "5"
petgraph = "0.4.1"
clap = "2.32.0"
log = "0.4.8"
env_logger = "0.7.1"

[dependencies.wasm]
git = "https://github.com/KeenS/WebAssembler-rs"
package = "web-assembler"

[dev-dependencies]
walkdir = "2.2.7"
# path = "../WebAssembler-rs/"
