[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "webml"
version = "0.1.0"
edition = "2018"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "7"
nom_locate = "4"
petgraph = "0.4.1"
clap = "2.32.0"
log = "0.4.8"
env_logger = "0.7.1"
regex = "1.3.7"
wasm = { version = "0.1.2", package = "web-assembler" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
walkdir = "2.2.7"

# [patch.crates-io]
# web-assembler = { path = "../WebAssembler-rs/" }
